Modal. Fix popup can't overflow modal
Reason: css-transform on modal doesn't allow to work position:fixed for popup
Fix: remove css-transform on opened modal after animation-ends

--- a/demo/src/components/modalView.scss
+++ b/demo/src/components/modalView.scss
@@ -45,3 +45,7 @@
   left: 50%;
   transform: translateX(-50%);
 }
+
+.mform {
+  max-width: 540px;
+}
